Git add three testing buttons

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GTM Testing</title>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -12,6 +8,12 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WG7S2P5');</script>
     <!-- End Google Tag Manager -->
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>GTM Testing</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
@@ -22,6 +24,12 @@
     <section>
         <h1>Welcome to GTM testing</h1>
         <p>This is a page where GTM analytics things are tested</p>
+        <span>Old content</span>
     </section>
+    <div class="btn-container">
+        <button class="btn btn-one">One</button>
+        <button class="btn btn-two">Two</button>
+        <button class="btn btn-three">Three</button>
+    </div>
 </body>
 </html>
