Add value attributes to test buttons

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <span>Old content</span>
     </section>
     <div class="btn-container">
-        <button class="btn btn-one">One</button>
-        <button class="btn btn-two">Two</button>
-        <button class="btn btn-three">Three</button>
+        <button class="btn btn-one" value="1">One</button>
+        <button class="btn btn-two" value="2">Two</button>
+        <button class="btn btn-three" value="3">Three</button>
     </div>
 </body>
 </html>
